Making sure new branch is up to date

--- a/group-list.html
+++ b/group-list.html
@@ -109,7 +109,7 @@
             let actionurl = `http://localhost:8000/group/create/${user}`;
             document.getElementById("groupForm").setAttribute("action", actionurl);
             document.getElementById("groupForm").submit();
-            location.reload();
+            //location.reload();
         }
 
         const deleteGroup = (group_id) => {
