--- a/home.html
+++ b/home.html
@@ -7,13 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shippie | Welcome</title>
     <link rel="shortcut icon" href="">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 
 <body>
     <div class="container">
         <br>
-        <img class="logo-big" src="logo-purple.png" width=200>
+        <img class="logo-big" src="/images/logo-purple.png" width=200>
         <br><br>
 
         <div class="row middle">
