--- a/book-list.html
+++ b/book-list.html
@@ -170,7 +170,7 @@
         const findSum = (order) => {
             let sum = 0;
             for (let item of order.items) {
-                sum += parseFloat(item.price);
+                sum += parseFloat(item.total_price);
             }
             return sum;
         }
@@ -233,7 +233,7 @@
             
             // if user is admin, load everything in the group's order
             if (group.admin_name == displayusername){
-                //insert items - HOW TO PUT QUANTITY HERE - @123
+                //insert items
                 for (let order of group.info) {
                     let sum = findSum(order);
                     for (let item of order.items) {
@@ -241,7 +241,11 @@
                             <div id="product" class="product">
                                 <div class="row">
                                     <div class="col-8">
-                                        <div class="url"><b>${item.url} </b>&nbsp;<span class="price">$${item.price}</span>&nbsp;<span class="quantity">     x ${item.quantity}</span></div>
+                                        <div class="url"><b>${item.url} </b>&nbsp;
+                                            <span class="price">$${item.price}</span>&nbsp;
+                                            <span class="quantity">     x ${item.quantity}</span>&nbsp;
+                                            <span class="quantity">  = $${item.total_price}</span>
+                                        </div>
                                         <div class="user"><b>Ordered by:</b> ${order.username}</div>
                                     </div>
                                     <button type="button" class="btn add-item" data-toggle="modal" onClick="changeButtonId('${item.id},${order.username}')" data-target="#myModal">Edit</button>
@@ -269,8 +273,10 @@
                             <div class="row">
                                 <div class="col-8">
                                     <div class="url"><b>${item.url}</b></div>
-                                    <div class="price2">$${item.price}</div>
-                                    <div class="quantity2">$${item.quantity}</div>
+                                    <div class="price2">$${item.price} &nbsp; 
+                                        <span class="quantity2">x ${item.quantity}</span>&nbsp;
+                                        <span class="quantity">  = $${item.total_price}</span>
+                                    </div>
                                 </div>
                                 <button type="button" class="btn add-item" data-toggle="modal" onClick="changeButtonId('${item.id},${displayusername}')" data-target="#myModal">Edit</button>
                                 <div class="col-2"><button id="remove-b" class="btn delete-item" onClick="deleteItem('${item.id},${displaygroupid},${displayusername}')">X </button></div>
